[package]
name = "httprc"
version = "0.1.0"
authors = ["xixu <xixu@paypal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
clap = "2.33.3"

[[bin]]
name = "hrc"
path = "src/main.rs"
